--- a/views/users/baseInfo.hbs
+++ b/views/users/baseInfo.hbs
@@ -138,8 +138,8 @@
                             <td>[[x.orderId]]</td>
                             <td>[[x.proId]]</td>
                             <td>[[x.type]]</td>
-                            <td>[[x.institution]]</td>
-                            <td>[[x.address]]</td>
+                            <td>[[x.institutionText|limitTo:6]]...</td>
+                            <td>[[x.addressText|limitTo:6]]...</td>
                             <td>[[x.waybillNumber]]</td>                          
                             <td>
                                 <span class="btn btn-primary"><a href="#!/orders/orderDetail?_id=[[x._id]]&type=edit">编辑查看</a></span>
